--- a/CSS/Stylesheetacrylicworks.CSS
+++ b/CSS/Stylesheetacrylicworks.CSS
@@ -31,6 +31,9 @@ background-repeat: no-repeat;
 .titleimage{
   width: 60%;
 }
+a.imageLink{
+    text-decoration:none;
+}
 .navbar{
   display: flexbox;
   text-align: center;
